fixed overlap mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -13,6 +13,7 @@ main {
   display: grid;
   place-items: center;
   width: 100vw;
+  margin-top: 20px;
   position: absolute;
   top: 50%;
   left: 50%;
